--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,13 @@
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 
+    <style name="BaseApp.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="BaseApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="BaseApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
