--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -61,7 +61,7 @@
                         android:layout_margin="15dp"
                         android:gravity="start"
                         android:text="Support Money"
-                        android:textColor="#000000"
+                        android:textColor="@color/colorBlack"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -73,7 +73,7 @@
                         android:layout_margin="15dp"
                         android:gravity="start"
                         android:text="Support_day"
-                        android:textColor="#000000"
+                        android:textColor="@color/colorBlack"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -147,16 +147,30 @@
                     android:layout_height="300dp"
                     android:src="@drawable/intro_phone" />
 
-                <Button
-                    android:id="@+id/btn_map"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:layout_marginTop="30sp"
                     android:layout_marginBottom="30sp"
-                    android:background="@color/colorWhite"
-                    android:drawableTop="@drawable/google"
-                    android:text="오시는 길" />
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/iv_map"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/google" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="오시는 길"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/speech_input_txt"
