--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -148,6 +148,7 @@
                     android:src="@drawable/intro_phone" />
 
                 <LinearLayout
+                    android:id="@+id/ll_map"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30sp"
@@ -156,7 +157,6 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/iv_map"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
