--- a/app/src/main/res/menu/menu_item_main.xml
+++ b/app/src/main/res/menu/menu_item_main.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/goFavorite"
-        android:title="관심품목 보기"
-        app:showAsAction="collapseActionView" />
+    <!--<item-->
+        <!--android:id="@+id/goFavorite"-->
+        <!--android:title="관심품목 보기"-->
+        <!--app:showAsAction="collapseActionView" />-->
 
-    <item
-        android:id="@+id/opensource"
-        android:title="오픈소스 라이선스"
-        app:showAsAction="collapseActionView" />
+    <!--<item-->
+        <!--android:id="@+id/opensource"-->
+        <!--android:title="오픈소스 라이선스"-->
+        <!--app:showAsAction="collapseActionView" />-->
 
 </menu>
