--- a/app/src/main/res/layout/activity_support_web.xml
+++ b/app/src/main/res/layout/activity_support_web.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Activity.MapActivity">
+        tools:context=".Activity.SupportWebActivity">
 
         <WebView
             android:id="@+id/wv_show"
