--- a/app/src/main/res/layout/fragment_phonebook.xml
+++ b/app/src/main/res/layout/fragment_phonebook.xml
@@ -21,6 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
+                app:contentScrim="@color/colorGrin"
                 app:expandedTitleTextAppearance="@android:color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
