--- a/app/src/main/res/layout/activity_memory.xml
+++ b/app/src/main/res/layout/activity_memory.xml
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".TotalMemory.MemoryActivity">
+            tools:context=".Activity.MemoryActivity">
 
             <TextView
                 android:id="@+id/tv_ram"
