--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -12,14 +12,28 @@
         android:layout_height="match_parent"
         tools:context=".Activity.MapActivity">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tb_back"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/colorGrin"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
         <WebView
             android:id="@+id/wv_show"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.9"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></WebView>
+            app:layout_constraintTop_toBottomOf="@+id/tb_back" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
