--- a/app/src/main/res/layout/activity_phoneinfo.xml
+++ b/app/src/main/res/layout/activity_phoneinfo.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorWhite"
-        tools:context=".TotalPhoneInfo.PhoneInfoActivity">
+        tools:context=".Activity.TotalPhoneInfo.PhoneInfoActivity">
 
         <TextView
             android:id="@+id/tv_phoneinfo_company"
