--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -77,18 +77,6 @@
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/tv_search_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:text="검색 설정"
-            android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cv_search" />
 
         <TextView
             android:id="@+id/tv_search_result"
@@ -113,7 +101,7 @@
             android:textSize="24sp"
             app:layout_constraintRight_toLeftOf="@+id/tv_low_price"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_search_setting" />
+            app:layout_constraintTop_toBottomOf="@+id/cv_search" />
 
         <TextView
             android:id="@+id/tv_low_price"
@@ -127,7 +115,7 @@
             android:textStyle="bold"
             android:visibility="invisible"
             app:layout_constraintLeft_toRightOf="@+id/tv_how_much_low_price"
-            app:layout_constraintTop_toBottomOf="@+id/tv_search_setting" />
+            app:layout_constraintTop_toBottomOf="@+id/cv_search" />
 
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -176,9 +164,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginTop="30sp"
-            android:layout_marginEnd="30sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/tv_low_price"
             app:layout_constraintTop_toBottomOf="@+id/cv_search" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
