--- a/app/src/main/res/layout/activity_support_web.xml
+++ b/app/src/main/res/layout/activity_support_web.xml
@@ -12,6 +12,18 @@
         android:layout_height="match_parent"
         tools:context=".Activity.SupportWebActivity">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tb_back"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorGrin"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
         <WebView
             android:id="@+id/wv_show"
             android:layout_width="match_parent"
