--- a/app/src/main/res/layout/item_phoneprice.xml
+++ b/app/src/main/res/layout/item_phoneprice.xml
@@ -8,6 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_support_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
